# hist

./: .gitignore  README.md
.github/workflows/: test-coverage.yaml
python/: MANIFEST.in  README.md  hist.qmd  pyproject.toml
python/tests/: test_hist.py
python/yfhist/: __init__.py  hist.py
r/: .Rbuildignore  .Rhistory  DESCRIPTION  NAMESPACE  README.md
r/.Rproj.user/98D66F85/pcs/: files-pane.pper  source-window.pper  windowlayoutstate.pper
r/.Rproj.user/98D66F85/sources/prop/: B4107C2E  F73CE576  INDEX
r/.Rproj.user/98D66F85/sources/session-96c5c7c5/: 0E43E23C  0E43E23C-contents  93A197E3  93A197E3-contents  F09E354D
r/.Rproj.user/shared/notebooks/: paths
r/R/: hist.R
r/data/: data_intervals.rda
r/data-raw/: intervals.csv
r/man/: data_intervals.Rd  get_col.Rd  get_data.Rd  get_session.Rd
r/tests/: testthat.R
r/tests/testthat/: helper-data.R  test-data.R  test-hist.R
