[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yfhist"
version = "0.1.3"
description = "Simple and efficient access to Yahoo Finance's historical data API (`/v8/finance/chart/{symbol}`) for querying and retrieval of financial data."
readme = "README.md"
authors = [{ name = "Jason Foster", email = "jason.j.foster@gmail.com"}]
license = { text = "MIT" }
keywords = ["finance", "yahoo", "history", "data", "equities", "mutual funds", "etfs", "indices", "futures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests >= 2.2.0",
    "pandas >= 1.0.0",
    "importlib-resources; python_version < '3.9'"
]

[tool.setuptools.package-data]
"yfhist" = ["data/*.csv"]

[project.urls]
Homepage = "https://github.com/jasonjfoster/hist"
Documentation = "https://github.com/jasonjfoster/hist/tree/main/python#readme"
Source = "https://github.com/jasonjfoster/hist/tree/main/python"
Issues = "https://github.com/jasonjfoster/hist/issues"
